update links and fix slider

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav d-lg-none">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <!-- <a class="nav-link" href="#">Instructions</a> -->
@@ -40,19 +40,19 @@
                                 Instructions
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Grossery</a>
-                                <a class="dropdown-item" href="#">Region</a>
+                                <a class="dropdown-item" href="./glossary.html">Grossery</a>
+                                <a class="dropdown-item" href="./region.html">Region</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Where to buy?</a>
+                            <a class="nav-link" href="./region.html">Where to buy?</a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mission</a>
+                            <a class="nav-link" href="./mission.html">Mission</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
