--- a/glossary.html
+++ b/glossary.html
@@ -31,33 +31,33 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav d-lg-none">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown active">
                             <!-- <a class="nav-link" href="#">Instructions</a> -->
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
                                 Instructions
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Grossery</a>
-                                <a class="dropdown-item" href="#">Region</a>
+                                <a class="dropdown-item" href="./glossary.html">Glossary</a>
+                                <a class="dropdown-item" href="./region.html">Region</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Where to buy?</a>
+                            <a class="nav-link" href="./where-to-buy.html">Where to buy?</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mission</a>
+                            <a class="nav-link" href="./mission.html">Mission</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="btn btn-buy shadow" href="#">Buy now</a>
+                            <a class="btn btn-buy shadow" href="./buy.html">Buy now</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-toggle="modal" data-target=".game-suplies-modal">Buy Game Supplies for the Event</a>
@@ -525,7 +525,7 @@
                         <a class="nav-link" href="#">Instructions</a>
                         <ul class="sub-menu">
                             <li><a href="./region.html">Region</a></li>
-                            <li><a href="./glossary.html">Grossery</a></li>
+                            <li><a href="./glossary.html">Glossary</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
