--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                                 Instructions
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="./glossary.html">Grossery</a>
+                                <a class="dropdown-item" href="./glossary.html">Glossary</a>
                                 <a class="dropdown-item" href="./region.html">Region</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./region.html">Where to buy?</a>
+                            <a class="nav-link" href="./where-to-buy.html">Where to buy?</a>
                         </li>
                         
                         <li class="nav-item">
@@ -127,7 +127,7 @@
                         <a class="nav-link" href="#">Instructions</a>
                         <ul class="sub-menu">
                             <li><a href="./region.html">Region</a></li>
-                            <li><a href="./glossary.html">Grossery</a></li>
+                            <li><a href="./glossary.html">Glossary</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
