--- a/region.html
+++ b/region.html
@@ -14,7 +14,7 @@
     <title>Easy profit</title>
 </head>
 
-<body>
+<body class="instructions-page">
     <header class="header position-relative home-header">
         <div id="particles"></div>
         <!--.navbar-->
@@ -79,14 +79,6 @@
                 </g>
             </g>
         </svg>
-
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1803.23 959" class="bottom-right">
-            <g id="Layer_2" data-name="Layer 2">
-                <g id="Layer_1-2" data-name="Layer 1">
-                    <path class="cls-1" fill="#ff8e9f" opacity="0.08" d="M1225.59,0l272.24,565a209.34,209.34,0,0,0,27.25,42.57L217.9,776.55C115,789.85,33.13,863.16,0,959H1803.23V0Z" />
-                </g>
-            </g>
-        </svg> -->
 
         <div class="container-fluid">
             <div class="row">
@@ -529,7 +521,7 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavBollom">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item has-submenu">
+                    <li class="nav-item has-submenu active">
                         <a class="nav-link active" href="#">Instructions</a>
                         <ul class="sub-menu">
                             <li><a href="./region.html">Region</a></li>
